# realtime-chat-backend

./: .env.example  .gitignore  .ruff.toml  Makefile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  run.py
alembic/: env.py
alembic/versions/: 3597efd0c167_initial_migration.py  a3743058131a_create_all_tables.py  c48d4bf2ece6_initial_migration.py  e3faf663288c_initial_migration.py
app/: main.py
app/admin/: __init__.py  admin.py  base.py
app/admin/views/: __init__.py  contact.py  group.py  message.py  user.py
app/api/: dependencies.py
app/api/v1/: auth.py  contacts.py  groups.py  messages.py  oauth.py  router.py  upload.py  users.py  websocket.py
app/auth/: __init__.py  database.py  oauth.py  users.py
app/core/: config.py  exceptions.py  middleware.py  redis.py  security.py  utils.py  websocket.py
app/db/: base.py
app/models/: __init__.py  contact.py  group.py  message.py  user.py
app/schemas/: __init__.py  contact.py  group.py  message.py  user.py
scripts/: create_superuser.py  reset_database.py  seed_users.py
tests/: __init__.py  conftest.py  test_auth.py  test_contacts.py  test_groups.py  test_health.py  test_messages.py  test_upload.py  test_users.py
